[package]
name = "cargo-disasm"
version = "0.2.1"
authors = ["Adolph C. <adolphc@outlook.com>"]
edition = "2018"
homepage = "https://github.com/ExPixel/cargo-disasm"
repository = "https://github.com/ExPixel/cargo-disasm"
readme = "README.md"
description = "Disassembly viewer for Rust projects (and more)"
license = "GPL-3.0"
include = [
    "src/**/*.rs",
    "Cargo.toml",
    "LICENSE.txt",
    "README.md"
]

[[bin]]
bench = false
path = "src/main.rs"
name = "cargo-disasm"

[dependencies]
clap = { version = "3.0.0-beta.2", features = ["derive"]}
shellexpand = "2"
cargo_metadata = "0.12"
atty = "0.2"
termcolor = "1"

goblin = "0.2"
gimli = "0.23"
rustc-demangle = "0.1"
cpp_demangle = "0.3"
pdb = "0.6"
memmap = "0.7"
once_cell = "1.4"

log = { version = "0.4", features = ["std"] }
anyhow = "1.0"

[dependencies.capstone]
package = "ep-capstone"
version = "0.1.0"
path = "capstone"
default-features = false
features = ["std", "sys-dyn-mem", "arm", "aarch64", "powerpc", "sparc", "x86"]

[workspace]
members = ["capstone"]
