[package]
name = "app"
version = "0.1.0"
authors = ["Adolph C. <adolphc@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
disasm = { path = "../disasm" }
clap = { version = "3.0.0-beta.2", features = ["derive"]}
shellexpand = "2"
cargo_metadata = "0.12"
atty = "0.2"
termcolor = "1"
log = { version = "0.4", features = ["std"] }
