[package]
name = "disasm"
version = "0.1.0"
authors = ["Adolph C. <adolphc@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
capstone = { path = "../capstone" }
common = { path = "../common" }
goblin = "0.2"
gimli = "0.23"
rustc-demangle = "0.1"
cpp_demangle = "0.3"
pdb = "0.6"
memmap = "0.7"
once_cell = "1.4"
log = "0.4"
